@@ -140,6 +140,8 @@ Library
 - Issue #10276: Fix the results of zlib.crc32() and zlib.adler32() on buffers
   larger than 4GB.  Patch by Nadeem Vawda.
 
+- Issue #11388: Added a clear() method to MutableSequence
+
 Build
 -----
 
